# FEMHeterosisPlate

./: .gitignore  README.md  STATEMENT.md  pyproject.toml
docs/: README.md  patch_test.md  references.md  tests.md  theory.md
output/integration_patch_diagnostics/eigen_diagnostics/: eigenvalue_report.txt
scripts/: convergence_compare_uniform_vs_gmsh.py  convergence_study_point_a.py  plot_mesh.py  plot_mesh_demo.py  plot_mesh_sliders.py  plot_mesh_strategies_comparison.py  run_clamped_square_uniform_pressure.py  run_patch_test_chapter11.py  run_patch_test_linear_field.py  run_problem.py  run_smoke_test.py  run_ssss_square_uniform_pressure.py
src/elements/: plate_elements.py
src/plate_fea/: __init__.py  assembly.py  boundary_conditions.py  boundary_conditions.py:Zone.Identifier  materials.py  mesh.py  mesh_generation.py  model.py  plotting.py  problem_orchestrator.py  quadrature.py  reference_solutions.py  solver.py
src/plate_fea/elements/: __init__.py  base.py  heterosis_plate.py
src/plate_fea_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  TODOs.md  test_clamped_square_uniform_pressure.py
tests/integration/: test_element_jacobian_and_stiffness.py  test_mesh_strategies.py  test_patch_chapter11_framework.py  test_patch_linear_field.py
tests/patch_test/: README.md  _helpers.py  test_five_element_patch.py  test_single_element_eigen.py
tests/unit/: test_material_constitutive_cache.py  test_shape_functions.py
tests/validation/: test_clamped_square_uniform_pressure.py  test_ssss_uniform_pressure_vs_navier.py
(+10 files in other folders)
